[gd_scene load_steps=14 format=3 uid="uid://dwjop4k8r5cte"]

[ext_resource type="Script" path="res://Scripts/Houses/school.gd" id="1_257qp"]
[ext_resource type="Texture2D" uid="uid://dcghom68x4rgq" path="res://Art/House/Inner.png" id="1_u07un"]
[ext_resource type="Texture2D" uid="uid://ds8quasleo37g" path="res://Art/House/window-1.png" id="2_n3n06"]
[ext_resource type="PackedScene" uid="uid://bel5hehfk4tcr" path="res://Scenes/Characters/player.tscn" id="3_7lwui"]
[ext_resource type="PackedScene" uid="uid://8qnhmgdmxsii" path="res://Scenes/pause_menu.tscn" id="5_xj85o"]
[ext_resource type="AudioStream" uid="uid://dy2masvp0gxu5" path="res://Art/Music/Bossa School.mp3" id="6_03i73"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5qgg2"]
texture = ExtResource("1_u07un")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
5:6/size_in_atlas = Vector2i(1, 3)
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -23.9375, 8.375, -24.1875, 8.375, 23.6875, -8.25, 23.8125)
6:6/size_in_atlas = Vector2i(1, 3)
6:6/0 = 0
6:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_0/angular_velocity = 0.0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8.125, -24.1875, 8, -24.0625, 8.375, 23.0625, -8, 23.1875)
7:6/size_in_atlas = Vector2i(1, 3)
7:6/0 = 0
7:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:6/0/physics_layer_0/angular_velocity = 0.0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -24.0625, 8.125, -23.9375, 7.875, 23.4375, -8, 23.5625)
10:3/size_in_atlas = Vector2i(3, 1)
10:3/0 = 0
10:3/0/y_sort_origin = -8
10:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/0/physics_layer_0/angular_velocity = 0.0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-23.3345, -7.86657, 23.3345, -8.04334, 23.1577, -5.21492, -22.981, -5.03814)
10:1/size_in_atlas = Vector2i(3, 1)
10:1/0 = 0
10:1/0/y_sort_origin = 5
10:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:1/0/physics_layer_0/angular_velocity = 0.0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-23, 3.8125, 23.25, 3.9375, 23.125, 8.0625, -23.125, 8.0625)
17:4/size_in_atlas = Vector2i(1, 3)
17:4/0 = 0
17:4/0/y_sort_origin = 5
17:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:4/0/physics_layer_0/angular_velocity = 0.0
17:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 3.9375, 8, 3.8125, 8, 8, -8, 8)
15:4/size_in_atlas = Vector2i(1, 3)
15:4/0 = 0
15:4/0/y_sort_origin = -15
15:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:4/0/physics_layer_0/angular_velocity = 0.0
15:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.125, -14.1875, 0.625, -17.6875, 6.875, -13.9375, 7.25, -10.6875, -7, -10.5625)
0:12/size_in_atlas = Vector2i(3, 1)
0:12/0 = 0
0:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:12/0/physics_layer_0/angular_velocity = 0.0
3:12/size_in_atlas = Vector2i(3, 2)
3:12/0 = 0
3:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:12/0/physics_layer_0/angular_velocity = 0.0
3:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-23.125, -16.0625, 23.125, -16.1875, 23, 12.9375, -23, 12.8125)
9:12/0 = 0
9:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:12/0/physics_layer_0/angular_velocity = 0.0
9:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.25, -1.0625, 3, -1.1875, 3, 5.1875, -3, 5.0625)
11:11/0 = 0
11:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:11/0/physics_layer_0/angular_velocity = 0.0
11:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.5, -1.1875, 5.125, -1.0625, 4.375, 6.4375, -4.5, 6.4375)
11:10/0 = 0
11:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:10/0/physics_layer_0/angular_velocity = 0.0
11:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.25, -1.5625, 3.375, -1.1875, 3.625, 4.8125, -3.5, 4.8125)
13:9/0 = 0
13:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:9/0/physics_layer_0/angular_velocity = 0.0
4:15/size_in_atlas = Vector2i(1, 2)
4:15/0 = 0
4:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:15/0/physics_layer_0/angular_velocity = 0.0
0:7/size_in_atlas = Vector2i(3, 1)
0:7/0 = 0
0:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_0/angular_velocity = 0.0
0:8/size_in_atlas = Vector2i(3, 1)
0:8/0 = 0
0:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:8/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7p6h0"]
texture = ExtResource("2_n3n06")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_c0thh"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_5qgg2")
sources/1 = SubResource("TileSetAtlasSource_7p6h0")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q4ovq"]
size = Vector2(46, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_58p2w"]
size = Vector2(23, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s44k4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vjyf0"]

[node name="School" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_257qp")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
position = Vector2(-16, 0)
tile_set = SubResource("TileSet_c0thh")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(65536, 327680, 6, 65537, 393216, 6, 65538, 393216, 6, 65539, 393216, 6, 65540, 393216, 6, 65541, 393216, 6, 65542, 393216, 6, 65543, 393216, 6, 65544, 393216, 6, 65545, 393216, 6, 65546, 393216, 6, 65547, 393216, 6, 65548, 393216, 6, 65549, 393216, 6, 65550, 458752, 6, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 786432, 0, 0, 851968, 0, 0, 917504, 0, 0, 983040, 0, 0, 1048576, 0, 0, 1114112, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 786433, 0, 0, 851969, 0, 0, 917505, 0, 0, 983041, 0, 0, 1048577, 0, 0, 1114113, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 0, 0, 720898, 0, 0, 786434, 0, 0, 851970, 0, 0, 917506, 0, 0, 983042, 0, 0, 1048578, 0, 0, 1114114, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 0, 0, 655363, 0, 0, 720899, 0, 0, 786435, 0, 0, 851971, 0, 0, 917507, 0, 0, 983043, 0, 0, 1048579, 0, 0, 1114115, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 589828, 0, 0, 655364, 0, 0, 720900, 0, 0, 786436, 0, 0, 851972, 0, 0, 917508, 0, 0, 983044, 0, 0, 1048580, 0, 0, 1114116, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 589829, 0, 0, 655365, 0, 0, 720901, 0, 0, 786437, 0, 0, 851973, 0, 0, 917509, 0, 0, 983045, 0, 0, 1048581, 0, 0, 1114117, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 589830, 0, 0, 655366, 0, 0, 720902, 0, 0, 786438, 0, 0, 851974, 0, 0, 917510, 0, 0, 983046, 0, 0, 1048582, 0, 0, 1114118, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 0, 0, 655367, 0, 0, 720903, 0, 0, 786439, 0, 0, 851975, 0, 0, 917511, 0, 0, 983047, 0, 0, 1048583, 0, 0, 1114119, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, 589832, 0, 0, 655368, 0, 0, 720904, 0, 0, 786440, 0, 0, 851976, 0, 0, 917512, 0, 0, 983048, 0, 0, 1048584, 0, 0, 1114120, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, 589833, 0, 0, 655369, 0, 0, 720905, 0, 0, 786441, 0, 0, 851977, 0, 0, 917513, 0, 0, 983049, 0, 0, 1048585, 0, 0, 1114121, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 589834, 0, 0, 655370, 0, 0, 720906, 0, 0, 786442, 0, 0, 851978, 0, 0, 917514, 0, 0, 983050, 0, 0, 1048586, 0, 0, 1114122, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 589835, 0, 0, 655371, 0, 0, 720907, 0, 0, 786443, 0, 0, 851979, 0, 0, 917515, 0, 0, 983051, 0, 0, 1048587, 0, 0, 1114123, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 0, 0, 589836, 0, 0, 655372, 0, 0, 720908, 0, 0, 786444, 0, 0, 851980, 0, 0, 917516, 0, 0, 983052, 0, 0, 1048588, 0, 0, 1114124, 0, 0, 196621, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0, 589837, 0, 0, 655373, 0, 0, 720909, 0, 0, 786445, 0, 0, 851981, 0, 0, 917517, 0, 0, 983053, 0, 0, 1048589, 0, 0, 1114125, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, 589838, 0, 0, 655374, 0, 0, 720910, 0, 0, 786446, 0, 0, 851982, 0, 0, 917518, 0, 0, 983054, 0, 0, 1048590, 0, 0, 1114126, 0, 0, 65530, 131072, 1, 65531, 131072, 1, 65532, 131072, 1, 65533, 131072, 1, 65534, 131072, 1, 65535, 131072, 1, 131066, 131072, 1, 196602, 131072, 1, 262138, 131072, 1, 327674, 131072, 1, 393210, 131072, 1, 458746, 131072, 1, 524282, 131072, 1, 589818, 131072, 1, 655354, 131072, 1, 720890, 131072, 1, 786426, 131072, 1, 851962, 131072, 1, 917498, 131072, 1, 983034, 131072, 1, 1048570, 131072, 1, 1114106, 131072, 1, 1179642, 131072, 1, 1245178, 131072, 1, 1310714, 131072, 1, 1376250, 131072, 1, 1441786, 131072, 1, 1507322, 131072, 1, 1572858, 131072, 1, 131067, 131072, 1, 196603, 131072, 1, 262139, 131072, 1, 327675, 131072, 1, 393211, 131072, 1, 458747, 131072, 1, 524283, 131072, 1, 589819, 131072, 1, 655355, 131072, 1, 720891, 131072, 1, 786427, 131072, 1, 851963, 131072, 1, 917499, 131072, 1, 983035, 131072, 1, 1048571, 131072, 1, 1114107, 131072, 1, 1179643, 131072, 1, 1245179, 131072, 1, 1310715, 131072, 1, 1376251, 131072, 1, 1441787, 131072, 1, 1507323, 131072, 1, 1572859, 131072, 1, 131068, 131072, 1, 196604, 131072, 1, 262140, 131072, 1, 327676, 131072, 1, 393212, 131072, 1, 458748, 131072, 1, 524284, 131072, 1, 589820, 131072, 1, 655356, 131072, 1, 720892, 131072, 1, 786428, 131072, 1, 851964, 131072, 1, 917500, 131072, 1, 983036, 131072, 1, 1048572, 131072, 1, 1114108, 131072, 1, 1179644, 131072, 1, 1245180, 131072, 1, 1310716, 131072, 1, 1376252, 131072, 1, 1441788, 131072, 1, 1507324, 131072, 1, 1572860, 131072, 1, 131069, 131072, 1, 196605, 131072, 1, 262141, 131072, 1, 327677, 131072, 1, 393213, 131072, 1, 458749, 131072, 1, 524285, 131072, 1, 589821, 131072, 1, 655357, 131072, 1, 720893, 131072, 1, 786429, 131072, 1, 851965, 131072, 1, 917501, 131072, 1, 983037, 131072, 1, 1048573, 131072, 1, 1114109, 131072, 1, 1179645, 131072, 1, 1245181, 131072, 1, 1310717, 131072, 1, 1376253, 131072, 1, 1441789, 131072, 1, 1507325, 131072, 1, 1572861, 131072, 1, 131070, 131072, 1, 196606, 131072, 1, 262142, 131072, 1, 327678, 131072, 1, 393214, 131072, 1, 458750, 131072, 1, 524286, 131072, 1, 589822, 131072, 1, 655358, 131072, 1, 720894, 131072, 1, 786430, 131072, 1, 851966, 131072, 1, 917502, 131072, 1, 983038, 131072, 1, 1048574, 131072, 1, 1114110, 131072, 1, 1179646, 131072, 1, 1245182, 131072, 1, 1310718, 131072, 1, 1376254, 131072, 1, 1441790, 131072, 1, 1507326, 131072, 1, 1572862, 131072, 1, 131071, 131072, 1, 196607, 131072, 1, 262143, 131072, 1, 327679, 131072, 1, 393215, 131072, 1, 458751, 131072, 1, 524287, 131072, 1, 589823, 131072, 1, 655359, 131072, 1, 720895, 131072, 1, 786431, 131072, 1, 851967, 131072, 1, 917503, 131072, 1, 983039, 131072, 1, 1048575, 131072, 1, 1114111, 131072, 1, 1179647, 131072, 1, 1245183, 131072, 1, 1310719, 131072, 1, 1376255, 131072, 1, 1441791, 131072, 1, 1507327, 131072, 1, 1572863, 131072, 1, 1179648, 131072, 1, 1245184, 131072, 1, 1310720, 131072, 1, 1376256, 131072, 1, 1441792, 131072, 1, 1507328, 131072, 1, 1179649, 131072, 1, 1245185, 131072, 1, 1310721, 131072, 1, 1376257, 131072, 1, 1441793, 131072, 1, 1507329, 131072, 1, 1179650, 131072, 1, 1245186, 131072, 1, 1310722, 131072, 1, 1376258, 131072, 1, 1441794, 131072, 1, 1507330, 131072, 1, 1179651, 131072, 1, 1245187, 131072, 1, 1310723, 131072, 1, 1376259, 131072, 1, 1441795, 131072, 1, 1507331, 131072, 1, 1179652, 131072, 1, 1245188, 131072, 1, 1310724, 131072, 1, 1376260, 131072, 1, 1441796, 131072, 1, 1507332, 131072, 1, 1179653, 131072, 1, 1245189, 131072, 1, 1310725, 131072, 1, 1376261, 131072, 1, 1441797, 131072, 1, 1507333, 131072, 1, 1179654, 131072, 1, 1245190, 131072, 1, 1310726, 131072, 1, 1376262, 131072, 1, 1441798, 131072, 1, 1507334, 131072, 1, 1179655, 131072, 1, 1245191, 131072, 1, 1310727, 131072, 1, 1376263, 131072, 1, 1441799, 131072, 1, 1507335, 131072, 1, 1179656, 131072, 1, 1245192, 131072, 1, 1310728, 131072, 1, 1376264, 131072, 1, 1441800, 131072, 1, 1507336, 131072, 1, 1179657, 131072, 1, 1245193, 131072, 1, 1310729, 131072, 1, 1376265, 131072, 1, 1441801, 131072, 1, 1507337, 131072, 1, 1179658, 131072, 1, 1245194, 131072, 1, 1310730, 131072, 1, 1376266, 131072, 1, 1441802, 131072, 1, 1507338, 131072, 1, 1179659, 131072, 1, 1245195, 131072, 1, 1310731, 131072, 1, 1376267, 131072, 1, 1441803, 131072, 1, 1507339, 131072, 1, 1179660, 131072, 1, 1245196, 131072, 1, 1310732, 131072, 1, 1376268, 131072, 1, 1441804, 131072, 1, 1507340, 131072, 1, 1179661, 131072, 1, 1245197, 131072, 1, 1310733, 131072, 1, 1376269, 131072, 1, 1441805, 131072, 1, 1507341, 131072, 1, 1179662, 131072, 1, 1245198, 131072, 1, 1310734, 131072, 1, 1376270, 131072, 1, 1441806, 131072, 1, 1507342, 131072, 1, 1179663, 131072, 1, 1245199, 131072, 1, 1310735, 131072, 1, 1376271, 131072, 1, 1441807, 131072, 1, 1507343, 131072, 1, 1179664, 131072, 1, 1245200, 131072, 1, 1310736, 131072, 1, 1376272, 131072, 1, 1441808, 131072, 1, 1507344, 131072, 1, 1179665, 131072, 1, 1245201, 131072, 1, 1310737, 131072, 1, 1376273, 131072, 1, 1441809, 131072, 1, 1507345, 131072, 1, 1179666, 131072, 1, 1245202, 131072, 1, 1310738, 131072, 1, 1376274, 131072, 1, 1441810, 131072, 1, 1507346, 131072, 1, 1179667, 131072, 1, 1245203, 131072, 1, 1310739, 131072, 1, 1376275, 131072, 1, 1441811, 131072, 1, 1507347, 131072, 1, 1179668, 131072, 1, 1245204, 131072, 1, 1310740, 131072, 1, 1376276, 131072, 1, 1441812, 131072, 1, 1507348, 131072, 1, -393201, 131072, 1, -327665, 131072, 1, -262129, 131072, 1, -196593, 131072, 1, -131057, 131072, 1, -65521, 131072, 1, 15, 131072, 1, 65551, 131072, 1, 131087, 131072, 1, 196623, 131072, 1, 262159, 131072, 1, 327695, 131072, 1, 393231, 131072, 1, 458767, 131072, 1, 524303, 131072, 1, 589839, 131072, 1, 655375, 131072, 1, 720911, 131072, 1, 786447, 131072, 1, 851983, 131072, 1, 917519, 131072, 1, 983055, 131072, 1, 1048591, 131072, 1, 1114127, 131072, 1, -393200, 131072, 1, -327664, 131072, 1, -262128, 131072, 1, -196592, 131072, 1, -131056, 131072, 1, -65520, 131072, 1, 16, 131072, 1, 65552, 131072, 1, 131088, 131072, 1, 196624, 131072, 1, 262160, 131072, 1, 327696, 131072, 1, 393232, 131072, 1, 458768, 131072, 1, 524304, 131072, 1, 589840, 131072, 1, 655376, 131072, 1, 720912, 131072, 1, 786448, 131072, 1, 851984, 131072, 1, 917520, 131072, 1, 983056, 131072, 1, 1048592, 131072, 1, 1114128, 131072, 1, -393199, 131072, 1, -327663, 131072, 1, -262127, 131072, 1, -196591, 131072, 1, -131055, 131072, 1, -65519, 131072, 1, 17, 131072, 1, 65553, 131072, 1, 131089, 131072, 1, 196625, 131072, 1, 262161, 131072, 1, 327697, 131072, 1, 393233, 131072, 1, 458769, 131072, 1, 524305, 131072, 1, 589841, 131072, 1, 655377, 131072, 1, 720913, 131072, 1, 786449, 131072, 1, 851985, 131072, 1, 917521, 131072, 1, 983057, 131072, 1, 1048593, 131072, 1, 1114129, 131072, 1, -393198, 131072, 1, -327662, 131072, 1, -262126, 131072, 1, -196590, 131072, 1, -131054, 131072, 1, -65518, 131072, 1, 18, 131072, 1, 65554, 131072, 1, 131090, 131072, 1, 196626, 131072, 1, 262162, 131072, 1, 327698, 131072, 1, 393234, 131072, 1, 458770, 131072, 1, 524306, 131072, 1, 589842, 131072, 1, 655378, 131072, 1, 720914, 131072, 1, 786450, 131072, 1, 851986, 131072, 1, 917522, 131072, 1, 983058, 131072, 1, 1048594, 131072, 1, 1114130, 131072, 1, -393197, 131072, 1, -327661, 131072, 1, -262125, 131072, 1, -196589, 131072, 1, -131053, 131072, 1, -65517, 131072, 1, 19, 131072, 1, 65555, 131072, 1, 131091, 131072, 1, 196627, 131072, 1, 262163, 131072, 1, 327699, 131072, 1, 393235, 131072, 1, 458771, 131072, 1, 524307, 131072, 1, 589843, 131072, 1, 655379, 131072, 1, 720915, 131072, 1, 786451, 131072, 1, 851987, 131072, 1, 917523, 131072, 1, 983059, 131072, 1, 1048595, 131072, 1, 1114131, 131072, 1, -393196, 131072, 1, -327660, 131072, 1, -262124, 131072, 1, -196588, 131072, 1, -131052, 131072, 1, -65516, 131072, 1, 20, 131072, 1, 65556, 131072, 1, 131092, 131072, 1, 196628, 131072, 1, 262164, 131072, 1, 327700, 131072, 1, 393236, 131072, 1, 458772, 131072, 1, 524308, 131072, 1, 589844, 131072, 1, 655380, 131072, 1, 720916, 131072, 1, 786452, 131072, 1, 851988, 131072, 1, 917524, 131072, 1, 983060, 131072, 1, 1048596, 131072, 1, 1114132, 131072, 1, -327686, 131072, 1, -262150, 131072, 1, -196614, 131072, 1, -131078, 131072, 1, -65542, 131072, 1, -6, 131072, 1, -327685, 131072, 1, -262149, 131072, 1, -196613, 131072, 1, -131077, 131072, 1, -65541, 131072, 1, -5, 131072, 1, -327684, 131072, 1, -262148, 131072, 1, -196612, 131072, 1, -131076, 131072, 1, -65540, 131072, 1, -4, 131072, 1, -327683, 131072, 1, -262147, 131072, 1, -196611, 131072, 1, -131075, 131072, 1, -65539, 131072, 1, -3, 131072, 1, -327682, 131072, 1, -262146, 131072, 1, -196610, 131072, 1, -131074, 131072, 1, -65538, 131072, 1, -2, 131072, 1, -327681, 131072, 1, -262145, 131072, 1, -196609, 131072, 1, -131073, 131072, 1, -65537, 131072, 1, -1, 131072, 1, -393216, 131072, 1, -327680, 131072, 1, -262144, 131072, 1, -196608, 131072, 1, -131072, 131072, 1, -65536, 131072, 1, -393215, 131072, 1, -327679, 131072, 1, -262143, 131072, 1, -196607, 131072, 1, -131071, 131072, 1, -65535, 131072, 1, -393214, 131072, 1, -327678, 131072, 1, -262142, 131072, 1, -196606, 131072, 1, -131070, 131072, 1, -65534, 131072, 1, -393213, 131072, 1, -327677, 131072, 1, -262141, 131072, 1, -196605, 131072, 1, -131069, 131072, 1, -65533, 131072, 1, -393212, 131072, 1, -327676, 131072, 1, -262140, 131072, 1, -196604, 131072, 1, -131068, 131072, 1, -65532, 131072, 1, -393211, 131072, 1, -327675, 131072, 1, -262139, 131072, 1, -196603, 131072, 1, -131067, 131072, 1, -65531, 131072, 1, -393210, 131072, 1, -327674, 131072, 1, -262138, 131072, 1, -196602, 131072, 1, -131066, 131072, 1, -65530, 131072, 1, -393209, 131072, 1, -327673, 131072, 1, -262137, 131072, 1, -196601, 131072, 1, -131065, 131072, 1, -65529, 131072, 1, -393208, 131072, 1, -327672, 131072, 1, -262136, 131072, 1, -196600, 131072, 1, -131064, 131072, 1, -65528, 131072, 1, -393207, 131072, 1, -327671, 131072, 1, -262135, 131072, 1, -196599, 131072, 1, -131063, 131072, 1, -65527, 131072, 1, -393206, 131072, 1, -327670, 131072, 1, -262134, 131072, 1, -196598, 131072, 1, -131062, 131072, 1, -65526, 131072, 1, -393205, 131072, 1, -327669, 131072, 1, -262133, 131072, 1, -196597, 131072, 1, -131061, 131072, 1, -65525, 131072, 1, -393204, 131072, 1, -327668, 131072, 1, -262132, 131072, 1, -196596, 131072, 1, -131060, 131072, 1, -65524, 131072, 1, -393203, 131072, 1, -327667, 131072, 1, -262131, 131072, 1, -196595, 131072, 1, -131059, 131072, 1, -65523, 131072, 1, -393202, 131072, 1, -327666, 131072, 1, -262130, 131072, 1, -196594, 131072, 1, -131058, 131072, 1, -65522, 131072, 1)
layer_1/name = "carpet"
layer_1/tile_data = PackedInt32Array(1114119, 0, 8, 458759, 0, 8, 524295, 0, 8, 589831, 0, 8, 655367, 0, 8, 720903, 0, 8, 786439, 0, 8, 851975, 0, 8, 917511, 0, 8, 983047, 0, 8, 1048583, 0, 8, 327687, 0, 7, 393223, 0, 8, 65541, 1, 0, 65545, 1, 0, 65536, 262144, 15, 65543, 262144, 15, 65550, 262144, 15)
layer_2/name = "decoration"
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array(851980, 851968, 9, 589836, 851968, 9, 327692, 851968, 9, 262151, 851968, 9, 327682, 851968, 9, 589826, 851968, 9, 851970, 851968, 9)
layer_3/name = "ysort"
layer_3/y_sort_enabled = true
layer_3/z_index = 1
layer_3/tile_data = PackedInt32Array(327687, 655360, 3, 262151, 655360, 1, 327692, 655360, 1, 327682, 655360, 1, 393218, 655360, 3, 393228, 655360, 3, 458764, 1114112, 4, 458754, 1114112, 4, 196615, 983040, 4, 589826, 655360, 1, 589836, 655360, 1, 655372, 655360, 3, 655362, 655360, 3, 720898, 1114112, 4, 720908, 1114112, 4, 851980, 655360, 1, 851970, 655360, 1, 917506, 655360, 3, 917516, 655360, 3, 983042, 1114112, 4, 983052, 1114112, 4, 851982, 720896, 10, 589824, 720896, 10, 327694, 720896, 10, 851968, 589824, 12, 589838, 589824, 12, 327680, 589824, 12, 1114117, 720896, 11, 1114121, 720896, 11, 131074, 196608, 12, 131084, 196608, 12, 65538, 0, 12, 65548, 0, 12)

[node name="Player" parent="." instance=ExtResource("3_7lwui")]
position = Vector2(104, 281)

[node name="Collision" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collision"]
polygon = PackedVector2Array(-3, 0, 224, 0, 224, 288, 126, 288, 126, 315, 80, 315, 80, 288, -16, 288, -16, 0, -7, 0, -4, -3, -20, -3, -20, 292, 76, 292, 76, 318, 129, 318, 129, 291, 228, 291, 228, -3, -1, -3)

[node name="World_Full_transition_point" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="World_Full_transition_point"]
position = Vector2(103, 302.5)
shape = SubResource("RectangleShape2D_q4ovq")

[node name="Book0_area" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Book0_area"]
position = Vector2(104.5, 72)
shape = SubResource("RectangleShape2D_58p2w")

[node name="Book1_area" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Book1_area"]
position = Vector2(25, 96)
shape = SubResource("RectangleShape2D_s44k4")

[node name="Book2_area" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Book2_area"]
position = Vector2(185, 96)
shape = SubResource("RectangleShape2D_vjyf0")

[node name="Book3_area" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Book3_area"]
position = Vector2(24, 159)
shape = SubResource("RectangleShape2D_vjyf0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Pause_menu" parent="CanvasLayer" instance=ExtResource("5_xj85o")]
process_mode = 3

[node name="Bossa_school" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_03i73")
volume_db = -20.0
autoplay = true

[connection signal="body_entered" from="World_Full_transition_point" to="." method="_on_world_full_transition_point_body_entered"]
[connection signal="body_entered" from="Book0_area" to="." method="_on_book_0_area_body_entered"]
[connection signal="body_exited" from="Book0_area" to="." method="_on_book_0_area_body_exited"]
[connection signal="body_entered" from="Book1_area" to="." method="_on_book_1_area_body_entered"]
[connection signal="body_exited" from="Book1_area" to="." method="_on_book_1_area_body_exited"]
[connection signal="body_entered" from="Book2_area" to="." method="_on_book_2_area_body_entered"]
[connection signal="body_exited" from="Book2_area" to="." method="_on_book_2_area_body_exited"]
[connection signal="body_entered" from="Book3_area" to="." method="_on_book_3_area_body_entered"]
[connection signal="body_exited" from="Book3_area" to="." method="_on_book_3_area_body_exited"]
